<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_send"
        android:title="@string/action_send"
        android:icon="@drawable/send_now"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_sender_settings"
        android:title="@string/action_sender_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
