<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <TextView android:id="@+id/text_view_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_about_version"
            android:layout_margin="5dp"
            android:layout_gravity="left" />

        <TextView android:id="@+id/text_view_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="5dp"
            android:text="@string/dialog_about_url"
            android:layout_gravity="left" />

        <TextView android:id="@+id/text_view_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/dialog_about_author"
            android:layout_gravity="left" />

        <TextView android:id="@+id/text_view_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/dialog_about_copyright"
            android:layout_gravity="left" />

        <TextView android:id="@+id/text_view_licence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars = "vertical"
            android:autoLink="web"
            android:layout_margin="5dp"
            android:text="@string/dialog_about_licence"
            android:layout_gravity="left" />
</LinearLayout>